Cleaned up a number of things related to navigation, commenting and added a bumper to groupWidget on smaller screens to fix ghost scrolling

--- a/src/components/PostEditorModal/PostEditorModal.scss
+++ b/src/components/PostEditorModal/PostEditorModal.scss
@@ -76,6 +76,8 @@
   position: absolute;
   top: 15px;
   right: 15px;
+  z-index: 100;
+
   &:hover {
     cursor: pointer;
   }
