--- a/src/components/Widget/GroupsWidget/GroupsWidget.scss
+++ b/src/components/Widget/GroupsWidget/GroupsWidget.scss
@@ -158,5 +158,10 @@
 @media screen and (max-width: 600px) {
   .groups {
     padding: 0 0 0 0;
+
+    .groupBumper {
+      height: 120px;
+      width: 100%;
+    }
   }
 }
