--- a/src/routes/PrimaryLayout/components/Navigation/Navigation.scss
+++ b/src/routes/PrimaryLayout/components/Navigation/Navigation.scss
@@ -54,7 +54,7 @@
 @media screen and (max-width: 930px) {
   .collapser {
     flex: 0 0 6%;
-    min-width: 50px;
+    min-width: 6%;
     margin: 0 15px 0 15px;
   }
 }
